# junie-translator-project

./: ARCHITECTURE_SUMMARY.md  Dockerfile  README.md  README.md.rej  README_NEW.md  SUMMARY.md  aiprovider.json  architecture_design.md  config.json  config.json.example  config.schema.json  docker-compose.yml  docker-entrypoint.sh  example.py  fix_summary.md  nginx.conf  prompts.json  pyproject.toml  requirements.txt  sample.srt  test_aiprovider.py  test_async_translator.py  test_auto_detection.py  test_translator.py
examples/: start_demo.py  translate_example.py
junie_translator/: __init__.py  cli.py  factory.py  translator.py
junie_translator/parsers/: __init__.py  base.py  srt.py
junie_translator/translators/: __init__.py  base.py  openai_translator.py
junie_translator/utils/: __init__.py  progress.py
src/: SUMMARY.md  cli.py  main.py
src/ai_layer/: __init__.py  client.py  service.py  translator.py
src/api_layer/: __init__.py  app.py  dependencies.py  models.py  routes.py
src/entities/: __init__.py  ai_model.py  config.py  prompt.py  srt.py
src/infra/: __init__.py  config_loader.py  manager.py  model_loader.py  prompt_loader.py
src/junie_translator/: __init__.py  cli.py  progress.py  srt_parser.py  translator.py
src/junie_translator_project/: __init__.py  cli.py  main.py  srt_parser.py  translator.py
src/junie_translator_project/ai/: __init__.py  translation_manager.py  translator.py
src/junie_translator_project/api/: __init__.py  app.py
src/junie_translator_project/api/dto/: __init__.py  config_dto.py  srt_dto.py  translation_dto.py
src/junie_translator_project/api/routers/: __init__.py  config_router.py  srt_router.py  translation_router.py
src/junie_translator_project/entity/: __init__.py  ai_model.py  config.py  prompt.py  srt.py
webui/: index.html  package.json  vite.config.js
webui/src/: App.vue  main.js
webui/src/router/: index.js
webui/src/services/: api.js
webui/src/stores/: app.js
webui/src/views/: FileTranslator.vue  Home.vue  Settings.vue  TextTranslator.vue
