[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "junie-translator-project"
version = "0.1.0"
description = "A Python program for translating SRT subtitle files using AI services"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Junie", email = "junie@example.com"},
]
dependencies = [
    "openai>=1.0.0",
    "tqdm>=4.65.0",
    "colorlog>=6.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
srt-translate = "junie_translator_project.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/junie_translator_project"]
